@@ -3,3 +3,4 @@ Changes in version 1.1.0 (2019-04-05)
 
 Changes in version 1.1.1 (2019-05-03)
 + Added log2_ratio normalization option.
++ Fix a bug that prevented strand_specific and stitch mode to work together.
